# opengeneral

./: .gitattributes  .gitignore  CLI.md  Makefile  README.md  allurerc.mjs  history.jsonl  index.html  install.ps1  install.sh  pyproject.toml  runs.json
.github/workflows/: ci.yml  cross-platform-tests.yml  release.yml
config-templates/: action-planes.json  agents.json  keys.json
config-templates/personas/: custom.json
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
docs/: ci.md  cross-platform-tests.md  release.md
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
packaging/: build.ps1  build.sh  elevation.ps1  entry.py  install.ps1  install.sh  service_host.py  uninstall.ps1  uninstall.sh
personas/: coder.json  minimal.json
runs/10/: index.html  (+1 more)
scripts/: allure_runs_index.py
tests/: conftest.py  test_action_plane.py  test_agent.py  test_agent_factory.py  test_daemon.py  test_daemon_client.py  test_key_config.py  test_keyring_store.py  test_manifest.py  test_personas.py  test_prompt.py  test_providers.py  test_providers_litellm.py  test_runner.py  test_runtime.py  test_service_launchd.py  test_service_systemd.py  test_service_windows.py  test_skills.py
tui/: Cargo.toml
tui/src/: app.rs  main.rs  rpc.rs  ui.rs
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  environment.json  executors.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+1896 files in other folders)
