[package]
name = "opengeneral-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for OpenGeneral: visualizes an agent's Action Plane connections and drives the chat."
license = "MIT"

[[bin]]
name = "opengeneral-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
